--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,9 +142,9 @@ add_dependencies(odom testing_cpp_generate_messages_cpp)
 add_executable(imu_converter src/imu_converter.cpp)
 target_link_libraries(imu_converter ${catkin_LIBRARIES})
 add_dependencies(imu_converter testing_cpp_generate_messages_cpp)
-add_executable(teleop_ps4 src/teleop_ps4.cpp)
-target_link_libraries(teleop_ps4 ${catkin_LIBRARIES})
-add_dependencies(teleop_ps4 testing_cpp_generate_messages_cpp)
+#add_executable(teleop_ps4 src/teleop_ps4.cpp)
+#target_link_libraries(teleop_ps4 ${catkin_LIBRARIES})
+#add_dependencies(teleop_ps4 testing_cpp_generate_messages_cpp)
 add_executable(gps_converters src/gps_converters.cpp)
 target_link_libraries(gps_converters ${catkin_LIBRARIES})
 add_dependencies(gps_converters testing_cpp_generate_messages_cpp)
