--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
  add_message_files(
    FILES
-   speed.msg
+   Speed.msg
+   Position.msg
 #   Message1.msg
 #   Message2.msg
  )
